# voice_training

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.e2e-override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  decode_token.mjs  package.json  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/agent/: counseling_agent.py  embeddings.py  evaluation_pipeline.py  evaluator_agent.py  fit_analyzer.py  graph.py  interview_planner.py  interviewer_agent.py  journal_agent.py  journal_extractor.py  journal_nodes.py  journal_planner.py  journal_rag.py  journal_router_agent.py  journal_state.py  journal_summarizer.py  learning_nodes.py  learning_planner.py  learning_state.py  (+18 more)
backend/migrations/: 2026-04-14-agent-session-scan-dive.sql  2026-04-17-nightly-study-v2.sql  2026-04-20-nightly-study-pending-action.sql  2026-04-22-nightly-study-agentic.sql
backend/scripts/: backfill_resume_embeddings.py  bench_cache.py  check_prefix_tokens.py  close_in_progress_sessions.py  measure_jd_coverage.py  verify_chunking.py  verify_learning_e2e.py  verify_resume_rag_e2e.py  verify_skill_match.py
backend/tests/: conftest.py  test_agent_interview_router.py  test_evaluator_normalize.py  test_fit_analyzer.py  test_interview_graph.py  test_job_posting_image.py  test_ns_api.py  test_ns_pivot_match.py  test_ns_srs.py  test_planner_dive.py  test_planner_rubric.py  test_planner_scan.py  test_report_aggregator.py  test_state_types.py
(+483 files in other folders)
