[project]
name = "voiceprep-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "bcrypt>=4.0",
    "openai>=2.0",
    "edge-tts>=6.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "pymupdf>=1.24",
    "sse-starlette>=2.0",
    "cryptography>=42.0",
    "joserfc>=1.0",
    "langgraph>=0.2",
    "langsmith>=0.1",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
markers = [
    "eval: 평가 하네스 — 실제 OpenAI 호출. `pytest -m eval`로만 실행됨",
]
